--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    border-radius: 1rem;
 }
 
 .item .text {
@@ -37,7 +39,7 @@
 
 
 
-/* Aggiunti da me */
+/* Aggiunti da me ------------------------------------------------------------------------------------------------ */
 html{
     background-color: rgb(63, 63, 63);
     color: white;
@@ -87,4 +89,3 @@ button:hover {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
